# textArria

./: README.md  item.py  main.py  player.py  pyproject.toml
Rendering/: rendertest.py
ssl/: client-cert.pem  client-key.pem  server-ca.pem
